@@ -42,6 +42,7 @@ importFrom(BiocGenerics,intersect)
 importFrom(BiocGenerics,strand)
 importFrom(BiocGenerics,unique)
 importFrom(GenomeInfoDb,intersect)
+importFrom(GenomeInfoDb,seqinfo)
 importFrom(GenomeInfoDb,seqlengths)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicFeatures,exonsBy)
